<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserSettingActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        tools:ignore="ScrollViewCount"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:cardMaxElevation="5dp">

                <ImageView
                    android:id="@+id/avatarImage"
                    android:layout_width="98dp"
                    android:layout_height="91dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/avatar_user_settinh"
                    tools:ignore="ContentDescription,HardcodedText" />

                <TextView
                    android:id="@+id/viewName"
                    android:layout_width="274dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/custom_buttom"
                    android:gravity="center"
                    android:text="@string/user_name"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    tools:ignore="TextSizeCheck" />


                <Button
                    android:id="@+id/editprofile"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="100dp"
                    android:background="@drawable/custom_buttom"
                    android:text="@string/edit_profile"
                    android:textColor="@color/white"
                    tools:ignore="NotSibling,TextContrastCheck" />

                <TextView
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="160dp"
                    android:background="@drawable/custom_buttom"
                    android:gravity="center"
                    android:text="@string/discounts_and_savings"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck,VisualLintOverlap" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="200dp"
                    android:gravity="center_vertical"
                    android:text="@string/rewards"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="260dp"
                    android:gravity="center_vertical"
                    android:text="@string/membership"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="320dp"
                    android:gravity="center_vertical"
                    android:text="@string/introduce"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />


                <TextView
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="385dp"
                    android:background="@drawable/custom_buttom"
                    android:gravity="center"
                    android:text="@string/my_account"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck,VisualLintOverlap" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/view2"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="427dp"
                    android:gravity="center_vertical"
                    android:text="@string/offers_for_members"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/button4"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="489dp"
                    android:gravity="center_vertical"
                    android:text="@string/favourite"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/button5"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="550dp"
                    android:gravity="center_vertical"
                    android:text="@string/payment_methods"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/view2"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="610dp"
                    android:gravity="center_vertical"
                    android:text="@string/booked"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/button4"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="670dp"
                    android:gravity="center_vertical"
                    android:text="@string/saved_places"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/button5"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="730dp"
                    android:gravity="center_vertical"
                    android:text="@string/sos_contact_number"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <TextView
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="793dp"
                    android:background="@drawable/custom_buttom"
                    android:gravity="center"
                    android:text="@string/general"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck,VisualLintOverlap" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/view2"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="835dp"
                    android:gravity="center_vertical"
                    android:text="@string/support_center"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/button4"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="895dp"
                    android:gravity="center_vertical"
                    android:text="@string/setting"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/button5"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="955dp"
                    android:gravity="center_vertical"
                    android:text="@string/share_feedback"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <TextView
                    android:id="@+id/view4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="1020dp"
                    android:background="@drawable/custom_buttom"
                    android:gravity="center"
                    android:text="@string/chance"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck,VisualLintOverlap" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/button4"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="1060dp"
                    android:gravity="center_vertical"
                    android:text="@string/happy_hands"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button14"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_below="@+id/button5"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="1120dp"
                    android:gravity="center_vertical"
                    android:text="@string/drive_with_us"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="RtlHardcoded,VisualLintButtonSize" />

                <Button
                    android:id="@+id/button15"
                    android:layout_width="370dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="22dp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical"
                    android:layout_marginTop="1175dp"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    tools:ignore="VisualLintButtonSize"
                    android:text="some thing"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottom"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:background="@color/white"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"-->
<!--        tools:ignore="VisualLintBottomNav"-->
<!--        app:menu="@menu/menu_taskbar"/>-->

    <include
        layout="@layout/toolbar_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>






